--- a/ubiquity/chrome/content/desktop-quicklaunch.html
+++ b/ubiquity/chrome/content/desktop-quicklaunch.html
@@ -6,6 +6,14 @@
   <title>Ubiquity Desktop Quicklaunch</title>
 </head>
 <body>
+<!-- 
+Currently there is NOTHING referencing this file. TRUE or False? 
+Either way, it has a .xhtml replacement and translations available
+for it now. As for the state of this portion of Ubiquity I am
+Uncertain of it's status and referencing.
+
+-L
+-->
 <p><b>Desktop QuickLaunch</b> is a very experimental new Ubiquity feature
 that allows Ubiquity to be used outside of the browser, from anywhere on
 your computer. Right now this feature is only supported on OS X, but
