--- a/ubiquity/chrome/content/cmdlist.xhtml
+++ b/ubiquity/chrome/content/cmdlist.xhtml
@@ -4,7 +4,7 @@
 	<!ENTITY % htmlDTD PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
 		%htmlDTD;
 
-	<!ENTITY % directionDTD SYSTEM "chrome://global/locale/global.dtd" >
+	<!ENTITY % directionDTD SYSTEM "chrome://global/locale/global.dtd">
 		%directionDTD;
 
 	<!ENTITY % ubiquityaboutDTD SYSTEM "chrome://ubiquity/locale/aboutubiquity.dtd">
@@ -16,7 +16,9 @@
 <head>
 	<title>&ubiquity.pagetitle.YourCommands;</title>
 
-	<link rel="shortcut icon" href="chrome://ubiquity/skin/icons/favicon.ico" type="image/x-icon" />
+	<base href="chrome://ubiquity/content" />
+
+	<link rel="icon" type="image/x-icon" id="favicon" href="chrome://ubiquity/skin/icons/favicon.ico" />
 	<link rel="stylesheet" type="text/css" media="all" href="web-content.css" />
 
 	<script src="resource://ubiquity/scripts/jquery.js"></script>
@@ -28,49 +30,49 @@
 </head>
 <body dir="&locale.dir;">
 
-	<div class="head">&ubiquity.tagline.YourCommands;</div>
-	<div id="nav-container"></div>
+<div class="head">&ubiquity.tagline.YourCommands;</div>
+<div id="nav-container"></div>
 
-	<br clear="all" />
+<br clear="all" />
 
-	<div style="text-align:center;">
-		<p>&ubiquity.pagetip.YourCommands;</p>
-		<p>&ubiquity.commandlist.SubscriptionDetails;</p>
-	</div>
+<div style="text-align:center;">
+	<p>&ubiquity.pagetip.YourCommands;</p>
+	<p>&ubiquity.commandlist.SubDetails1; <span id="num-commands"></span> &ubiquity.commandlist.SubDetails2; <span id="num-subscribed-feeds"></span> &ubiquity.commandlist.SubDetailsCommandFeeds; | <span id="unsubscribed-feeds-help">&ubiquity.commandlist.SubDetails3; <a href="#graveyard"><span id="num-unsubscribed-feeds"></span> &ubiquity.commandlist.SubDetailsCommandFeeds;</a> | </span><a id="show-hide-cmdlist-help" onclick=""></a></p>
+</div>
 
-	<div id="cmdlist-help-div" class="ubiq-tutorial" style="display:none;font-size:100%">
-		<ul>
-			<li>&ubiquity.commandlist.CommandHelpParagraph1;</li>
-			<li>&ubiquity.commandlist.CommandHelpParagraph2;</li>
-			<li>&ubiquity.commandlist.CommandHelpParagraph3;</li>
-			<li>&ubiquity.commandlist.CommandHelpParagraph4;</li>
-			<li>&ubiquity.commandlist.CommandHelpParagraph5;</li>
-		</ul>
-	</div>
+<div id="cmdlist-help-div" class="ubiq-tutorial" style="display:none;font-size:100%">
+	<ul>
+		<li>&ubiquity.commandlist.CommandHelpParagraph1;</li>
+		<li>&ubiquity.commandlist.CommandHelpParagraph2;</li>
+		<li>&ubiquity.commandlist.CommandHelpParagraph3;</li>
+		<li>&ubiquity.commandlist.CommandHelpParagraph4;</li>
+		<li>&ubiquity.commandlist.CommandHelpParagraph5;</li>
+	</ul>
+</div>
 
-	<table width="100%">
-		<thead>
-			<tr>
-				<th width="30%" colspan="1">&ubiquity.commandlist.SubscribedFeeds;</th>
-				<th width="70%" colspan="2">&ubiquity.commandlist.AvailableCommands;</th></tr>
-			<tr>
-				<td colspan="3">
-					&ubiquity.commandlist.SortBy; <a onclick="changeSortMode('feed');">&ubiquity.commandlist.SortByFeed;</a> | <a onclick="changeSortMode('feed-date');">&ubiquity.commandlist.SortByDate;</a> | <a onclick="changeSortMode('enabled');">&ubiquity.commandlist.SortByEnabled;</a> | <a onclick="changeSortMode('cmd');">&ubiquity.commandlist.SortByCommand;</a>
-				</td>
-			</tr>
-		</thead>
+<table width="100%">
+	<thead>
+		<tr>
+			<th width="30%" colspan="1">&ubiquity.commandlist.SubscribedFeeds;</th>
+			<th width="70%" colspan="2">&ubiquity.commandlist.AvailableCommands;</th></tr>
+		<tr>
+			<td colspan="3">
+				&ubiquity.commandlist.SortBy; <a onclick="changeSortMode('feed');">&ubiquity.commandlist.SortByFeed;</a> | <a onclick="changeSortMode('feed-date');">&ubiquity.commandlist.SortByDate;</a> | <a onclick="changeSortMode('enabled');">&ubiquity.commandlist.SortByEnabled;</a> | <a onclick="changeSortMode('cmd');">&ubiquity.commandlist.SortByCommand;</a>
+			</td>
+		</tr>
+	</thead>
 
-		<tbody id="commands-and-feeds-table"></tbody>
-	</table>
+	<tbody id="commands-and-feeds-table"></tbody>
+</table>
 
-	<br clear="all" />
+<br clear="all" />
 
-	<div id="command-feed-graveyard-div">
-		<h2 id="graveyard">&ubiquity.commandlist.UnsubscribedFeeds;</h2>
-		<p id="command-feed-graveyard-header">&ubiquity.commandlist.GraveYardText;</p>
+<div id="command-feed-graveyard-div">
+	<h2 id="graveyard">&ubiquity.commandlist.UnsubscribedFeeds;</h2>
+	<p id="command-feed-graveyard-header">&ubiquity.commandlist.GraveYardText;</p>
 
-		<ul id="command-feed-graveyard"></ul>
-	</div>
+	<ul id="command-feed-graveyard"></ul>
+</div>
 
 </body>
 </html>
