--- a/ubiquity/chrome/content/confirm-add-command.xhtml
+++ b/ubiquity/chrome/content/confirm-add-command.xhtml
@@ -4,7 +4,7 @@
 	<!ENTITY % htmlDTD PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
 		%htmlDTD;
 
-	<!ENTITY % directionDTD SYSTEM "chrome://global/locale/global.dtd" >
+	<!ENTITY % directionDTD SYSTEM "chrome://global/locale/global.dtd">
 		%directionDTD;
 
 	<!ENTITY % ubiquityaboutDTD SYSTEM "chrome://ubiquity/locale/aboutubiquity.dtd">
@@ -15,14 +15,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml" class="blacklist">
 <head>
 	<title>&ubiquity.pagetitle.ConfirmAddCommand;</title>
+
+	<base href="chrome://ubiquity/content" />
+
+	<link rel="icon" type="image/png" id="favicon" href="chrome://global/skin/icons/blacklist_favicon.png" />
 	<link rel="stylesheet" href="chrome://global/skin/netError.css" type="text/css" media="all" />
-	<link rel="icon" type="image/png" id="favicon" href="chrome://global/skin/icons/blacklist_favicon.png"/>
 
 	<script src="resource://ubiquity/scripts/jquery.js"></script>
 	<script type="text/javascript" src="chrome://ubiquity/content/localeglobals.js"></script>
+
 	<script type="application/javascript;version=1.7" src="confirm-add-command.js"></script>
 
-	<!-- note to self, this is called from /modules/default_feed_plugin.js -->
 </head>
 <body dir="&locale.dir;">
 
@@ -53,6 +56,7 @@
 			<div class="todo" style="border-style:solid; border-width:2px; width:80%; padding:10px; border-color:#ffff00">
 				<p>&ubiquity.confirmsubscription.FingerPrintPlaceHolderText;</p>
 			</div>
+
 		</div>
 
 		<div id="buttons">
@@ -75,6 +79,7 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;
 				<input type="submit" value="&ubiquity.confirmsubscription.ButtonTextAcceptCommand;" onclick="onSubmit();"/>
 			</p>
+
 		</div>
 	</div>
 </div>
@@ -85,7 +90,7 @@
 	</div>
 
 	<div id="confirmationLongDesc">
-		<p>&ubiquity.confirmsubscription.SubConfirmationLongPart1; <a href="chrome://ubiquity/content/cmdlist.xhtml">&ubiquity.confirmsubscription.SubConfirmationLongLinkText;</a> &ubiquity.confirmsubscription.SubConfirmationLongPart2;</p>
+		<p>&ubiquity.confirmsubscription.SubConfirmationLongPart1; <a href="chrome://ubiquity/content/cmdlist.html">&ubiquity.confirmsubscription.SubConfirmationLongLinkText;</a> &ubiquity.confirmsubscription.SubConfirmationLongPart2;</p>
 		<p>You may now close this window.</p>
 	</div>
 </div>
