--- a/ubiquity/chrome/content/support.xhtml
+++ b/ubiquity/chrome/content/support.xhtml
@@ -4,7 +4,7 @@
 	<!ENTITY % htmlDTD PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
 		%htmlDTD;
 
-	<!ENTITY % directionDTD SYSTEM "chrome://global/locale/global.dtd" >
+	<!ENTITY % directionDTD SYSTEM "chrome://global/locale/global.dtd">
 		%directionDTD;
 
 	<!ENTITY % ubiquityaboutDTD SYSTEM "chrome://ubiquity/locale/aboutubiquity.dtd">
@@ -16,8 +16,10 @@
 <head>
 	<title>&ubiquity.pagetitle.Support;</title>
 
+	<base href="chrome://ubiquity/content" />
+
+	<link rel="icon" type="image/x-icon" id="favicon" href="chrome://ubiquity/skin/icons/favicon.ico" />
 	<link rel="stylesheet" type="text/css" media="all" href="web-content.css" />
-	<link rel="shortcut icon" href="chrome://ubiquity/skin/icons/favicon.ico" type="image/x-icon" />
 
 	<script src="resource://ubiquity/scripts/jquery.js"></script>
 	<script type="text/javascript" src="chrome://ubiquity/content/localeglobals.js"></script>
@@ -26,32 +28,32 @@
 </head>
 <body dir="&locale.dir;">
 
-	<div class="head">&ubiquity.tagline.Support;</div>
-	<div id="nav-container"></div>
+<div class="head">&ubiquity.tagline.Support;</div>
+<div id="nav-container"></div>
 
-	<br clear="all" />
+<br clear="all" />
 
-	<div style="text-align:center;">
-		<p>&ubiquity.pagetip.Support;</p>
-	</div>
+<div style="text-align:center;">
+	<p>&ubiquity.pagetip.Support;</p>
+</div>
 
-	<br clear="all" />
+<br clear="all" />
 
-	<div class="col-five">
-		<h2 class="top">&ubiquity.support.GetHelp;</h2>
-		<p>&ubiquity.support.GetHelpParagraph1;</p>
-		<p>&ubiquity.support.GetHelpParagraph2;</p>
-		<p>&ubiquity.support.GetHelpParagraph3;</p>
-		<p>&ubiquity.support.GetHelpParagraph4;</p>
-	</div>
+<div class="col-five">
+	<h2 class="top">&ubiquity.support.GetHelp;</h2>
+	<p>&ubiquity.support.GetHelpParagraph1;</p>
+	<p><a href="http://getsatisfaction.com/mozilla/products/mozilla_ubiquity">&ubiquity.support.GetHelpGSFN;</a> &ubiquity.support.GetHelpParagraph2;</p>
+	<p><a href="http://groups.google.com/group/ubiquity-firefox">&ubiquity.support.GetHelpGoogleGroups;</a> &ubiquity.support.GetHelpParagraph3;</p>
+	<p><a href='https://wiki.mozilla.org/Labs/Ubiquity'>&ubiquity.support.GetHelpUbiquityWiki;</a> &ubiquity.support.GetHelpParagraph4;</p>
+</div>
 
-	<div class="col-four">
-		<h2 class="top">&ubiquity.support.ReportBugs;</h2>
-		<p>&ubiquity.support.ReportBugsParagraph1;</p>
+<div class="col-four">
+	<h2 class="top">&ubiquity.support.ReportBugs;</h2>
+	<p>&ubiquity.support.ReportBugsParagraph1;</p>
 
-		<h2>&ubiquity.support.ResetUbiquity;</h2>
-		<p>&ubiquity.support.ResetUbiquityParagraph1;</p>
-	</div>
+	<h2>&ubiquity.support.ResetUbiquity;</h2>
+	<p>&ubiquity.support.ResetUbiquityParagraph1Part1; <a href='reset.xhtml'>&ubiquity.support.ResetUbiquityParagraph1LinkText;</a> &ubiquity.support.ResetUbiquityParagraph1Part2;</p>
+</div>
 
 </body>
 </html>
