--- a/ubiquity/chrome/content/cmdlist.xhtml
+++ b/ubiquity/chrome/content/cmdlist.xhtml
@@ -37,7 +37,7 @@
 
 <div style="text-align:center;">
 	<p>&ubiquity.pagetip.YourCommands;</p>
-	<p>&ubiquity.commandlist.SubDetails1; <span id="num-commands"></span> &ubiquity.commandlist.SubDetails2; <span id="num-subscribed-feeds"></span> &ubiquity.commandlist.SubDetailsCommandFeeds; | <span id="unsubscribed-feeds-help">&ubiquity.commandlist.SubDetails3; <a href="#graveyard"><span id="num-unsubscribed-feeds"></span> &ubiquity.commandlist.SubDetailsCommandFeeds;</a> | </span><a id="show-hide-cmdlist-help" onclick=""></a></p>
+	<p>&ubiquity.commandlist.SubDetails1; <span id="num-commands"></span> &ubiquity.commandlist.SubDetails2; <span id="num-subscribed-feeds"></span> &ubiquity.commandlist.SubDetailsCommandFeeds; | <span id="unsubscribed-feeds-help">&ubiquity.commandlist.SubDetails3; <a href="chrome://ubiquity/content/cmdlist.xhtml#graveyard"><span id="num-unsubscribed-feeds"></span> &ubiquity.commandlist.SubDetailsCommandFeeds;</a> | </span><a id="show-hide-cmdlist-help" onclick=""></a></p>
 </div>
 
 <div id="cmdlist-help-div" class="ubiq-tutorial" style="display:none;font-size:100%">
