--- a/ubiquity/chrome/content/confirm-add-command.xhtml
+++ b/ubiquity/chrome/content/confirm-add-command.xhtml
@@ -90,7 +90,7 @@
 	</div>
 
 	<div id="confirmationLongDesc">
-		<p>&ubiquity.confirmsubscription.SubConfirmationLongPart1; <a href="chrome://ubiquity/content/cmdlist.html">&ubiquity.confirmsubscription.SubConfirmationLongLinkText;</a> &ubiquity.confirmsubscription.SubConfirmationLongPart2;</p>
+		<p>&ubiquity.confirmsubscription.SubConfirmationLongPart1; <a href="chrome://ubiquity/content/cmdlist.xhtml">&ubiquity.confirmsubscription.SubConfirmationLongLinkText;</a> &ubiquity.confirmsubscription.SubConfirmationLongPart2;</p>
 		<p>You may now close this window.</p>
 	</div>
 </div>
