locale: Filled in missing ja entities. s/WindowsWarning/Bug449Warning/g
--HG--
extra : rebase_source : c8c2269a1f0401c8d47afe20f98e14f668737e4e

--- a/ubiquity/chrome/content/editor.xhtml
+++ b/ubiquity/chrome/content/editor.xhtml
@@ -147,12 +147,12 @@
 </div>
 
 <div class="col-three">
-	<p><strong>&ubiquity.editor.CommandEditorReadAuthTutPart1; <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.5_Author_Tutorial">&ubiquity.editor.CommandEditorReadAuthTutLinkText1;</a></strong> &ubiquity.editor.CommandEditorReadAuthTutPart2; <a href="resource://ubiquity/standard-feeds">&ubiquity.editor.CommandEditorReadAuthTutLinkText2;</a></p>
-	<p style="background-color: #F2E78B; padding:5px;">&ubiquity.editor.CommandEditorReadTheDocs; <a href="file.xhtml#index.html">&ubiquity.editor.CommandEditorReadTheDocsLinkText;</a></p>
+	<p><strong>&ubiquity.editor.CommandEditorReadAuthTutPart1;<a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.5_Author_Tutorial">&ubiquity.editor.CommandEditorReadAuthTutLinkText1;</a></strong>&ubiquity.editor.CommandEditorReadAuthTutPart2;<a href="resource://ubiquity/standard-feeds">&ubiquity.editor.CommandEditorReadAuthTutLinkText2;</a>&ubiquity.editor.CommandEditorReadAuthTutPart3;</p>
+	<p style="background-color: #F2E78B; padding:5px;">&ubiquity.editor.CommandEditorReadTheDocs;<a href="file.xhtml#index.html">&ubiquity.editor.CommandEditorReadTheDocsLinkText;</a></p>
 </div>
 
 <div class="col-two">
-	<p>&ubiquity.editor.CommandEditorGetInvolved; <a href="http://wiki.mozilla.org/Labs/Ubiquity">&ubiquity.editor.CommandEditorGetInvolvedLinkText;</a></p>
+	<p>&ubiquity.editor.CommandEditorGetInvolvedPart1;<a href="http://wiki.mozilla.org/Labs/Ubiquity">&ubiquity.editor.CommandEditorGetInvolvedLinkText;</a>&ubiquity.editor.CommandEditorGetInvolvedPart2;</p>
 </div>
 
 <div id="editor-actions">
@@ -173,7 +173,7 @@
 
 	<div>
 		<span class="feed-type-desc" id="commands">&ubiquity.editor.RegularCommandDesc;</span>
-		<span class="feed-type-desc" id="locked-down-commands">&ubiquity.editor.LockedCommandDesc; <a href="https://wiki.mozilla.org/Labs/Ubiquity/Locked-Down_Feed_Tutorial">&ubiquity.editor.LockedCommandDescLinkText;</a></span>
+		<span class="feed-type-desc" id="locked-down-commands">&ubiquity.editor.LockedCommandDescPart1;<a href="https://wiki.mozilla.org/Labs/Ubiquity/Locked-Down_Feed_Tutorial">&ubiquity.editor.LockedCommandDescLinkText;</a>&ubiquity.editor.LockedCommandDescPart2;</span>
 	</div>
 
 	<br clear="all" />
@@ -202,14 +202,14 @@
 
 <div class="col-five">
 	<h2>&ubiquity.editor.ShareYourCommands;</h2>
-	<p>&ubiquity.editor.ShareCommandsParagraph1Part1; <a href="http://wiki.mozilla.org/Labs/Ubiquity/Commands_In_The_Wild">&ubiquity.editor.ShareCommandsParagraph1LinkText;</a> &ubiquity.editor.ShareCommandsParagraph1Part2;</p>
-	<p>&ubiquity.editor.ShareCommandsParagraph2Part1; <a href="https://ubiquity.mozilla.com/herd/command-feed/">&ubiquity.editor.ShareCommandsParagraph2LinkText1;</a> &ubiquity.editor.ShareCommandsParagraph2Part2; <a href="https://ubiquity.mozilla.com/herd/">&ubiquity.editor.ShareCommandsParagraph2LinkText2;</a></p>
+	<p>&ubiquity.editor.ShareCommandsParagraph1Part1;<a href="http://wiki.mozilla.org/Labs/Ubiquity/Commands_In_The_Wild">&ubiquity.editor.ShareCommandsParagraph1LinkText;</a>&ubiquity.editor.ShareCommandsParagraph1Part2;</p>
+	<p>&ubiquity.editor.ShareCommandsParagraph2Part1;<a href="https://ubiquity.mozilla.com/herd/command-feed/">&ubiquity.editor.ShareCommandsParagraph2LinkText1;</a>&ubiquity.editor.ShareCommandsParagraph2Part2;<a href="https://ubiquity.mozilla.com/herd/">&ubiquity.editor.ShareCommandsParagraph2LinkText2;</a>&ubiquity.editor.ShareCommandsParagraph2Part3;</p>
 
 	<h2>&ubiquity.editor.DevelopingUbiquity;</h2>
-	<p>&ubiquity.editor.DevelopingUbiquityParagraph1; <a href="test.html">&ubiquity.editor.DevelopingUbiquityParagraph1LinkText;</a></p>
-	<p>&ubiquity.editor.DevelopingUbiquityParagraph2; <a href="feed.xhtml#experimental-commands.html">&ubiquity.editor.DevelopingUbiquityParagraph2LinkText;</a></p>
+	<p>&ubiquity.editor.DevelopingUbiquityParagraph1Part1;<a href="test.html">&ubiquity.editor.DevelopingUbiquityParagraph1LinkText;</a>&ubiquity.editor.DevelopingUbiquityParagraph1Part2;</p>
+	<p>&ubiquity.editor.DevelopingUbiquityParagraph2Part1;<a href="feed.xhtml#experimental-commands.html">&ubiquity.editor.DevelopingUbiquityParagraph2LinkText;</a>&ubiquity.editor.DevelopingUbiquityParagraph2Part2;</p>
 	<p>&ubiquity.editor.DevelopingUbiquityParagraph3Part1; <a href="chrome://ubiquity/content/playpen.html">&ubiquity.editor.DevelopingUbiquityParagraph3LinkText1;</a> &ubiquity.editor.DevelopingUbiquityParagraph3Part2; <a href="chrome://ubiquity/content/tuner.html">&ubiquity.editor.DevelopingUbiquityParagraph3LinkText2;</a> &ubiquity.editor.DevelopingUbiquityParagraph3Part3;</p>
-	<p>&ubiquity.editor.DevelopingUbiquityParagraph4; <a href="feed.xhtml#core-developer-commands.html">&ubiquity.editor.DevelopingUbiquityParagraph4LinkText;</a></p>
+	<p>&ubiquity.editor.DevelopingUbiquityParagraph4Part1;<a href="feed.xhtml#core-developer-commands.html">&ubiquity.editor.DevelopingUbiquityParagraph4LinkText;</a>&ubiquity.editor.DevelopingUbiquityParagraph4Part2;</p>
 </div>
 
 <div class="col-four">
