--- a/ubiquity/chrome/content/settings.xhtml
+++ b/ubiquity/chrome/content/settings.xhtml
@@ -106,7 +106,7 @@
 		<li><a class="button" onclick="saveCustomSkin()">&ubiquity.settings.SaveSkin;</a> <a class="button" onclick="saveAs()">&ubiquity.settings.SaveSkinAs;</a> <a class="button" onclick="pasteToGist()">&ubiquity.settings.ShareSkin;</a> &ubiquity.settings.SaveNotice;</li>
 
 		<br /><br />
-		<div class="warning">&ubiquity.settings.WindowsWarning; <a href='http://ubiquity.mozilla.com/trac/ticket/449'>&ubiquity.settings.WindowsWarningLinkText;</a></div>
+		<div class="warning">&ubiquity.settings.Bug449WarningPart1;<a href='http://ubiquity.mozilla.com/trac/ticket/449'>&ubiquity.settings.Bug449WarningLinkText;</a>&ubiquity.settings.Bug449WarningPart2;</div>
 		<br /><br />
 
 		<li><textarea rows="30" style="width:92%" id="skin-editor"></textarea></li>
