fixed bug #858, CodeMirror no longer fails in fx 3.0.x. bug was caused by syntax highlighting causing CodeMirror to break. The editor never tried to do syntax highlighting with fx 3.5.x, which is why we didn't see the problem there.

--- a/ubiquity/chrome/content/editor.xhtml
+++ b/ubiquity/chrome/content/editor.xhtml
@@ -78,7 +78,10 @@
       }
     }
     function highlight() {
-      if(!getHighlighting()) {
+      //TODO: doing syntax highlighting breaks the editor, so we're always
+      //skipping the syntax highlighting for now. See if we can
+      //fix this at some point.
+      if(true || !getHighlighting()) {
         setupTextarea();
         return;
       }
