--- a/ubiquity/chrome/content/about.xhtml
+++ b/ubiquity/chrome/content/about.xhtml
@@ -1,35 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <!DOCTYPE html [
-	<!ENTITY % htmlDTD PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
-		%htmlDTD;
-
-	<!ENTITY % directionDTD SYSTEM "chrome://global/locale/global.dtd">
-		%directionDTD;
-
-	<!ENTITY % ubiquityaboutDTD SYSTEM "chrome://ubiquity/locale/aboutubiquity.dtd">
-		%ubiquityaboutDTD;
+  <!ENTITY % htmlDTD PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
+    %htmlDTD;
+  <!ENTITY % directionDTD SYSTEM "chrome://global/locale/global.dtd">
+    %directionDTD;
+  <!ENTITY % ubiquityaboutDTD SYSTEM "chrome://ubiquity/locale/aboutubiquity.dtd">
+    %ubiquityaboutDTD;
 ]>
-
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<title>&ubiquity.pagetitle.About;</title>
+  <title>&ubiquity.pagetitle.About;</title>
 
-	<base href="chrome://ubiquity/content" />
+  <base href="chrome://ubiquity/content" />
 
-	<link rel="stylesheet" type="text/css" media="all" href="web-content.css" />
-	<link rel="icon" type="image/x-icon" id="favicon" href="chrome://ubiquity/skin/icons/favicon.ico" />
+  <link rel="stylesheet" type="text/css" media="all" href="web-content.css" />
+  <link rel="icon" type="image/x-icon" id="favicon" href="chrome://ubiquity/skin/icons/favicon.ico" />
 
-	<script type="text/javascript" src="resource://ubiquity/scripts/jsparser.js"></script>
-	<script type="text/javascript" src="resource://ubiquity/scripts/jquery.js"></script>
+  <script type="text/javascript" src="resource://ubiquity/scripts/jsparser.js"></script>
+  <script type="text/javascript" src="resource://ubiquity/scripts/jquery.js"></script>
 
-	<script type="text/javascript" src="chrome://ubiquity/content/localeglobals.js"></script>
-	<script type="application/javascript;version=1.8" src="chrome://ubiquity/content/header.js"></script>
+  <script type="text/javascript" src="chrome://ubiquity/content/localeglobals.js"></script>
+  <script type="application/javascript;version=1.8" src="chrome://ubiquity/content/header.js"></script>
 
-	<script type="application/javascript;version=1.8" src="chrome://ubiquity/content/tutorial.js"></script>
-	<script type="text/javascript" src="prefkeys.js"></script>
-
+  <script type="application/javascript;version=1.8" src="chrome://ubiquity/content/tutorial.js"></script>
+  <script type="text/javascript" src="prefkeys.js"></script>
 </head>
 <body dir="&locale.dir;">
 
@@ -40,50 +35,52 @@
 <br clear="all" />
 
 <div style="text-align:center;" class="not-the-tutorial">
-	<p>&ubiquity.pagetip.About;</p>
+  <p>&ubiquity.pagetip.About;</p>
 </div>
 
 <br clear="all" />
 
 <div class="col-five">
 
-	<div class="not-the-tutorial">
-		<h2 class="top">&ubiqutiy.about.WhatIsUbiquity;</h2>
-		<p>&ubiqutiy.about.WhatIsParagraph1;</p>
-		<p>&ubiqutiy.about.WhatIsParagraph2;</p>
-		<p>&ubiqutiy.about.WhatIsParagraph3;</p>
-		<!-- todo: an animated gif here? -->
-	</div>
+  <div class="not-the-tutorial">
+    <h2 class="top">&ubiqutiy.about.WhatIsUbiquity;</h2>
+    <p>&ubiqutiy.about.WhatIsParagraph1;</p>
+    <p>&ubiqutiy.about.WhatIsParagraph2;</p>
+    <p>&ubiqutiy.about.WhatIsParagraph3;</p>
+    <!-- todo: an animated gif here? -->
+  </div>
 
-  	<h2 class="not-the-tutorial">&ubiqutiy.about.LearnHow;</h2>
-	<span id="debug"></span>
+    <h2 class="not-the-tutorial">&ubiqutiy.about.LearnHow;</h2>
+  <span id="debug"></span>
 
-	<div id="interactive-tutorial-div">
-		<div id="tutorial-instructions-div" class="ubiq-tutorial">
-			<a onclick="startUbiqTutorial();">&ubiqutiy.about.TutorialButton;</a>
-		</div>
+  <div id="interactive-tutorial-div">
+    <div id="tutorial-instructions-div" class="ubiq-tutorial">
+      <a onclick="startUbiqTutorial();">&ubiqutiy.about.TutorialButton;</a>
+    </div>
 
-		<br clear="all" />
+    <br clear="all" />
 
-		<div id="tutorial-contents-div"></div>
+    <div id="tutorial-contents-div"></div>
 
-	</div>
+  </div>
 
-	<div id="canvas-goes-here"></div>
+  <div id="canvas-goes-here"></div>
 
 </div>
 
 <div class="col-four not-the-tutorial">
+  <h2 class="top">&ubiqutiy.about.MoreOnUsingUbiquity;</h2>
+  <p>&ubiqutiy.about.UsingParagraph1Part1; <a href="https://wiki.mozilla.org/Labs/Ubiquity/Latest_Ubiquity_User_Tutorial">&ubiqutiy.about.UsingParagraph1LinkText;</a> &ubiqutiy.about.UsingParagraph1Part2;</p>
+  <p>&ubiqutiy.about.UsingParagraph2Part1; <a href="https://ubiquity.mozilla.com/herd/command-feed/">&ubiqutiy.about.UsingParagraph2LinkText1;</a> &ubiqutiy.about.UsingParagraph2Part2; <a href="https://ubiquity.mozilla.com/herd">&ubiqutiy.about.UsingParagraph2LinkText2;</a> &ubiqutiy.about.UsingParagraph2Part3;</p>
+  <p>&ubiqutiy.about.UsingParagraph3Part1; <a href="https://wiki.mozilla.org/Labs/Ubiquity/Roadmap">&ubiqutiy.about.UsingParagraph3LinkText;</a> &ubiqutiy.about.UsingParagraph3Part2;</p>
+  <p>&ubiqutiy.about.UsingParagraph4Part1; <a href="https://wiki.mozilla.org/Labs/Ubiquity/Credits">&ubiqutiy.about.UsingParagraph4LinkText;</a> &ubiqutiy.about.UsingParagraph4Part2;</p>
 
-	<h2 class="top">&ubiqutiy.about.MoreOnUsingUbiquity;</h2>
-	<p>&ubiqutiy.about.UsingParagraph1Part1;<a href="https://wiki.mozilla.org/Labs/Ubiquity/Latest_Ubiquity_User_Tutorial">&ubiqutiy.about.UsingParagraph1LinkText;</a>&ubiqutiy.about.UsingParagraph1Part2;</p>
-	<p>&ubiqutiy.about.UsingParagraph2Part1;<a href="https://ubiquity.mozilla.com/herd/command-feed/">&ubiqutiy.about.UsingParagraph2LinkText1;</a>&ubiqutiy.about.UsingParagraph2Part2;<a href="https://ubiquity.mozilla.com/herd">&ubiqutiy.about.UsingParagraph2LinkText2;</a>&ubiqutiy.about.UsingParagraph2Part3;</p>
-	<p>&ubiqutiy.about.UsingParagraph3Part1;<a href="https://wiki.mozilla.org/Labs/Ubiquity/Roadmap">&ubiqutiy.about.UsingParagraph3LinkText;</a>&ubiqutiy.about.UsingParagraph3Part2;</p>
-	<p>&ubiqutiy.about.UsingParagraph4Part1;<a href="https://wiki.mozilla.org/Labs/Ubiquity/Credits">&ubiqutiy.about.UsingParagraph4LinkText;</a>&ubiqutiy.about.UsingParagraph4Part2;</p>
-
-	<h2>&ubiqutiy.about.Thanks;</h2>
-	<p>&ubiquity.about.ThanksParagraph1; <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.5.3_Release_Notes">&appTitle; <span class="version"></span> &ubiquity.about.ThanksParagraph1LinkText;</a>.</p>
-
+  <h2>&ubiqutiy.about.Thanks;</h2>
+  <p>
+    &ubiquity.about.ThanksParagraphPart1;
+    <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.5.3_Release_Notes">&appTitle; <span class="version"></span> &ubiquity.about.ThanksParagraphLinkText;</a>
+    &ubiquity.about.ThanksParagraphPart2;
+  </p>
 </div>
 
 <br clear="all" />
