l10n: Applied the rest of #850 with some tweaked properties.

--- a/ubiquity/chrome/content/bug19warning.xhtml
+++ b/ubiquity/chrome/content/bug19warning.xhtml
@@ -4,11 +4,14 @@
     %htmlDTD;
   <!ENTITY % directionDTD SYSTEM "chrome://global/locale/global.dtd">
     %directionDTD;
-
   <!ENTITY % ubiquityaboutDTD SYSTEM "chrome://ubiquity/locale/aboutubiquity.dtd">
     %ubiquityaboutDTD;
+  <!ENTITY % ubiquityinternalDTD SYSTEM "chrome://ubiquity/content/internal.dtd">
+    %ubiquityinternalDTD;
 ]>
+
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
   <title>&ubiquity.pagetitle.bug19warning;</title>
 
