--- a/ubiquity/chrome/content/editor.xhtml
+++ b/ubiquity/chrome/content/editor.xhtml
@@ -6,6 +6,8 @@
     %directionDTD;
   <!ENTITY % ubiquityaboutDTD SYSTEM "chrome://ubiquity/locale/aboutubiquity.dtd">
     %ubiquityaboutDTD;
+  <!ENTITY % ubiquityinternalDTD SYSTEM "chrome://ubiquity/content/internal.dtd">
+    %ubiquityinternalDTD;
 ]>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
