--- a/ubiquity/chrome/content/reset.xhtml
+++ b/ubiquity/chrome/content/reset.xhtml
@@ -6,8 +6,12 @@
     %directionDTD;
   <!ENTITY % ubiquityaboutDTD SYSTEM "chrome://ubiquity/locale/aboutubiquity.dtd">
     %ubiquityaboutDTD;
+  <!ENTITY % ubiquityinternalDTD SYSTEM "chrome://ubiquity/content/internal.dtd">
+    %ubiquityinternalDTD;
 ]>
+
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
   <title>&ubiquity.pagetitle.ResetUbiquity;</title>
 
