--- a/ubiquity/chrome/content/settings.xhtml
+++ b/ubiquity/chrome/content/settings.xhtml
@@ -6,8 +6,12 @@
     %directionDTD;
   <!ENTITY % ubiquityaboutDTD SYSTEM "chrome://ubiquity/locale/aboutubiquity.dtd">
     %ubiquityaboutDTD;
+  <!ENTITY % ubiquityinternalDTD SYSTEM "chrome://ubiquity/content/internal.dtd">
+    %ubiquityinternalDTD;
 ]>
+
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
   <title>&ubiquity.pagetitle.Settings;</title>
 
@@ -17,7 +21,6 @@
   <link rel="stylesheet" type="text/css" media="all" href="web-content.css" />
 
   <script src="resource://ubiquity/scripts/jquery.js"></script>
-  <script type="text/javascript" src="chrome://ubiquity/content/localeglobals.js"></script>
   <script type="application/javascript;version=1.8" src="chrome://ubiquity/content/header.js"></script>
 
   <script type="application/javascript;version=1.8" src="settings.js"></script>
@@ -56,8 +59,8 @@
 
       <p><input id="keyInputBox" type="text" size="42" style="cursor:pointer"
         onkeydown="PrefKeys.onKeyChange(event)"
-        onfocus="this.value = _ubundle.GetStringFromName('ubiquity.prefkeys.pressyourcombo')"
-        onblur="PrefKeys.onLoad()"/> <!--  onfocus="this.value = 'Press your combination'" -->
+        onfocus="this.value = L('ubiquity.prefkeys.pressyourcombo')"
+        onblur="PrefKeys.onLoad()"/>
 
       <br />
       &ubiquity.settings.ChangeShortcut;
