--- a/ubiquity/chrome/content/localization-template.xhtml
+++ b/ubiquity/chrome/content/localization-template.xhtml
@@ -33,10 +33,10 @@
   <br clear="all" />
 
   <div style="text-align:center;">
-    <p>&ubiquity.localizecmd.ForTemplate; <code><span class="feedKey"></span>.po</code> | <a id="show-hide-cmdlist-help" onclick=""></a></p>
+    <p>&ubiquity.localizecmd.ForTemplate; <code><span class="feedKey"></span>.po</code> | <a id="show-hide-help" onclick=""></a></p>
   </div>
 
-  <div id="cmdlist-help-div" class="ubiq-tutorial" style="display:none;font-size:100%">
+  <div id="help-div" class="ubiq-tutorial" style="display:none;font-size:100%">
     <ul>
       <li>
         <p>&ubiquity.localizecmd.HelpParagraph1Part1; <span class="feedKey"></span> &ubiquity.localizecmd.HelpParagraph1Part2; <a href="http://en.wikipedia.org/wiki/Gettext">&ubiquity.localizecmd.HelpParagraph1LinkText;</a> &ubiquity.localizecmd.HelpParagraph1Part3;</p>
