about: rm jsparser.js

--- a/ubiquity/chrome/content/about.xhtml
+++ b/ubiquity/chrome/content/about.xhtml
@@ -20,11 +20,8 @@
   <link rel="stylesheet" type="text/css" media="all" href="web-content.css" />
   <link rel="icon" type="image/x-icon" id="favicon" href="chrome://ubiquity/skin/icons/favicon.ico" />
 
-  <script type="text/javascript" src="resource://ubiquity/scripts/jsparser.js"></script>
   <script type="text/javascript" src="resource://ubiquity/scripts/jquery.js"></script>
-
   <script type="application/javascript;version=1.8" src="chrome://ubiquity/content/header.js"></script>
-
   <script type="application/javascript;version=1.8" src="chrome://ubiquity/content/tutorial.js"></script>
   <script type="text/javascript" src="prefkeys.js"></script>
 </head>
@@ -43,7 +40,6 @@
 <br clear="all" />
 
 <div class="col-five">
-
   <div class="not-the-tutorial">
     <h2 class="top">&ubiqutiy.about.WhatIsUbiquity;</h2>
     <p>&ubiqutiy.about.WhatIsParagraph1;</p>
@@ -52,7 +48,7 @@
     <!-- todo: an animated gif here? -->
   </div>
 
-    <h2 class="not-the-tutorial">&ubiqutiy.about.LearnHow;</h2>
+  <h2 class="not-the-tutorial">&ubiqutiy.about.LearnHow;</h2>
   <span id="debug"></span>
 
   <div id="interactive-tutorial-div">
@@ -63,11 +59,9 @@
     <br clear="all" />
 
     <div id="tutorial-contents-div"></div>
-
   </div>
 
   <div id="canvas-goes-here"></div>
-
 </div>
 
 <div class="col-four not-the-tutorial">
@@ -80,7 +74,9 @@
   <h2>&ubiqutiy.about.Thanks;</h2>
   <p>
     &ubiquity.about.ThanksParagraphPart1;
-    <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.5.3_Release_Notes">&appTitle; <span class="version"></span> &ubiquity.about.ThanksParagraphLinkText;</a>
+    <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.5.3_Release_Notes">
+      &appTitle; <span class="version"></span>
+      &ubiquity.about.ThanksParagraphLinkText;</a>
     &ubiquity.about.ThanksParagraphPart2;
   </p>
 </div>
