i18n: applying lech's cmdlist etc. patch (CHANGES DTDs)

--- a/ubiquity/chrome/content/cmdlist.xhtml
+++ b/ubiquity/chrome/content/cmdlist.xhtml
@@ -23,7 +23,7 @@
   <script src="resource://ubiquity/scripts/jquery.js"></script>
   <script type="application/javascript;version=1.8" src="chrome://ubiquity/content/header.js"></script>
 
-  <script type="application/javascript;version=1.7" src="cmdlist.js"></script>
+  <script type="application/javascript;version=1.8" src="cmdlist.js"></script>
 
 </head>
 <body dir="&locale.dir;">
@@ -35,7 +35,7 @@
 
 <div style="text-align:center;">
   <p>&ubiquity.pagetip.YourCommands;</p>
-  <p>&ubiquity.commandlist.SubDetails1; <span id="num-commands"></span> &ubiquity.commandlist.SubDetails2; <span id="num-subscribed-feeds"></span> &ubiquity.commandlist.SubDetailsCommandFeeds; | <span id="unsubscribed-feeds-help">&ubiquity.commandlist.SubDetails3; <a href="chrome://ubiquity/content/cmdlist.xhtml#graveyard"><span id="num-unsubscribed-feeds"></span> &ubiquity.commandlist.SubDetailsCommandFeeds;</a> | </span><a id="show-hide-cmdlist-help" onclick=""></a></p>
+  <p>&ubiquity.commandlist.SubscriptionDetails;</p>
 </div>
 
 <div id="cmdlist-help-div" class="ubiq-tutorial" style="display:none;font-size:100%">
