ContextUtils: Made setSelection() use Range#toString() rather than Selection#toString() for better reflection of HTML source. Refactored and added to docs.

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -24,6 +24,8 @@
     <li><a class="intra-wiki"
            href="#modules/nounutils.js">NounUtils</a></li>
     <li><a class="intra-wiki"
+           href="#modules/contextutils.js">ContextUtils</a></li>
+    <li><a class="intra-wiki"
            href="#modules/eventhub.js">EventHub</a></li>
     <li><a class="intra-wiki"
            href="#modules/webjsm.js">WebJsModule</a></li>
