--- a/ubiquity/chrome/content/playpen.html
+++ b/ubiquity/chrome/content/playpen.html
@@ -133,7 +133,6 @@
     
     <div id='languages'></div>
     <div>
-      <!--<input type='button' name='clearnouncache' value='clear noun cache' id='clearnouncache'></input>-->
       <label for='maxSuggestions'>max suggestions:</label><input id='maxSuggestions' value='5' size='2'/>
       <input type='checkbox' name='displayparseinfo' id='displayparseinfo'></input><label title='this will slow things down considerably' for='displayparseinfo'>display parse info</label><input type='checkbox' name='displayparsetree' id='displayparsetree'></input><label title='this will *not* affect performance' for='displayparsetree'>display parse lineage</label><input type='checkbox' name='autoparse' id='autoparse'></input><label title='this will slow things down considerably' for='autoparse'>automatically parse on update</label>
       <br/>
@@ -142,6 +141,7 @@
        <input type='checkbox' id='gu-sync' checked='checked'/>
        sync with <code>gUbiquity</code>
       </label>
+      <input type='checkbox' name='flushcache' id='flushcache' checked='checked'></input><label for='flushcache'>flush cache on parse (necessary for accurate timings)</label>
     </div>
     
 		<div id='border'>
